@@ -25,6 +25,7 @@ Version 1.0.5 to be released
 - New #254: Added support to allow input widgets to be used with tabular inputs (Qiang)
 - New #265: Added support to validate time and datetime inputs (Qiang)
 - New #268: Added support to allow using dot syntax to generate list options with CHtml (Qiang)
+- New #274: Added support to allow using route sub-patterns in URL rules (Qiang)
 - New #284: Refactored code about page states to simplify overriding efforts (Qiang)
 - New #291: Added support to validate emails with name part (Qiang)
 - New #293: Added support to allow Yii to be used with other libraries which rely on autoload (Qiang)
